--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "^4.17.1",
     "gulp-nodemon": "^2.5.0",
     "gulp-run": "^1.7.1",
-    "nodemon": "^2.0.6"
+    "mocha": "^8.2.0",
+    "nodemon": "^2.0.6",
+    "supertest": "^6.0.0"
   },
   "devDependencies": {
     "gulp": "^4.0.2"
