--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "supertest": "^6.0.0"
   },
   "devDependencies": {
+    "grunt-cli": "^1.3.2",
+    "grunt-run": "^0.8.1",
     "gulp": "^4.0.2"
   },
-  "engines":{
+  "engines": {
     "node": ">=14"
   }
 }
