--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parse": "^0.1.0",
     "dotenv": "^8.2.0",
+    "etcd3": "^1.1.0",
     "express": "^4.17.1",
     "gulp-nodemon": "^2.5.0",
     "gulp-run": "^1.7.1",
