--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,7 +19,7 @@ jobs:
         CF_API_ENDPOINT: ${{ secrets.CF_API_ENDPOINT }}
         # Path to manifest.yml
         MANIFEST_FILE_PATH: './manifest.yml'
-        # # Cloud Foundry ORG Name
-        # ORG: ${{ secrets.ORG }}
-        # # Cloud Foundry Space Name for the specified ORG
-        # SPACE: ${{ secrets.SPACE }}
+        # Cloud Foundry ORG Name
+        ORG: ${{ secrets.ORG }}
+        # Cloud Foundry Space Name for the specified ORG
+        SPACE: ${{ secrets.SPACE }}
