--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,10 +11,10 @@ jobs:
       uses: subhamx/ibm-cloud-foundry-deploy@master
       with:
         # # For Users who have opted for Authentication using Email & Password
-        # EMAIL: ${{ secrets.IBM_CLOUD_API_KEY.USER_EMAIL }}
-        # PASSWORD: ${{ secrets.IBM_CLOUD_API_KEY.USER_PASSWORD }}
+        EMAIL: ${{ secrets.IBM_CLOUD_API_KEY.USER_EMAIL }}
+        PASSWORD: ${{ secrets.IBM_CLOUD_API_KEY.USER_PASSWORD }}
         # # For Users who have opted for Authentication using API KEY
-        IBM_CLOUD_API_KEY: ${{ secrets.IBM_CLOUD_API_KEY }}
+        # IBM_CLOUD_API_KEY: ${{ secrets.IBM_CLOUD_API_KEY }}
         # Cloud Foundry API Endpoint
         CF_API_ENDPOINT: ${{ secrets.CF_API_ENDPOINT }}
         # Path to manifest.yml
