--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,6 +15,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    env: 
+      IBM_CLOUD_API_KEY: ${{ secrets.SECRET_TOKEN }}
     steps:
       - uses: actions/checkout@v2
       - name: Deploy to IBM Cloud Foundry
