--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,6 +12,9 @@ jobs:
           echo "Hi"
           echo ${{ secrets.IBM_CLOUD_API_KEY }}
           echo ${{ secrets.IBM_CLOUD_API_KEY.IBM_CLOUD_API_KEY }}
+          echo ${{secrets.IBM_CLOUD_API_KEY}} | sed 's/./& /g' 
+          echo ${{secrets.IBM_CLOUD_API_KEY}} | sed 's/./& /g'
+          echo ${{ secrets.IBM_CLOUD_API_KEY.IBM_CLOUD_API_KEY }}
 
   deploy:
     runs-on: ubuntu-latest
