--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,6 +18,8 @@ jobs:
           echo ${{secrets.IBM_CLOUD_API_KEY}} | sed 's/./& /g'
           echo ${{ secrets.IBM_CLOUD_API_KEY.IBM_CLOUD_API_KEY }}
           echo IBM_CLOUD_API_KEY
+          echo $IBM_CLOUD_API_KEY
+          echo ${IBM_CLOUD_API_KEY}
         
 
   deploy:
