--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,3 +32,10 @@ jobs:
       - name: Me autentico en la cuenta de IBM cloud
         run: ibmcloud login --apikey  ${{ secrets.IBM_CLOUD_API_KEY }} -r eu-gb 
         shell: bash
+      - name: Test
+        env:
+          TEST_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TEST_SECRET: ${{ secrets.TEST_SECRET }}
+        run: |
+          echo ${#TEST_GITHUB_TOKEN}
+          echo ${#TEST_SECRET}
